--- a/app/src/main/res/layout/item_chat_list_layout.xml
+++ b/app/src/main/res/layout/item_chat_list_layout.xml
@@ -1,68 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/pullToRefresh"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorBlack">
+    android:paddingTop="8dp"
+    android:paddingBottom="2dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/rlt_chatitem"
-        android:paddingTop="10dp"
-        android:background="#000"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:id="@+id/img_msg_sender"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        app:civ_border_color="@color/colorWhite"
+        app:civ_border_width="2dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_avatar" />
 
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/img_msg_sender"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="8dp"
-            app:civ_border_color="@color/colorWhite"
-            app:civ_border_width="2dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_avatar" />
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_margin="4dp"
-            android:layout_gravity="center"
-            android:indeterminateDrawable="@drawable/progressbar"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/img_msg_sender"
-            app:layout_constraintEnd_toEndOf="@+id/img_msg_sender"
-            app:layout_constraintStart_toStartOf="@+id/img_msg_sender"
-            app:layout_constraintTop_toTopOf="@+id/img_msg_sender" />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_margin="4dp"
+        android:indeterminateDrawable="@drawable/progressbar"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/img_msg_sender"
+        app:layout_constraintEnd_toEndOf="@+id/img_msg_sender"
+        app:layout_constraintStart_toStartOf="@+id/img_msg_sender"
+        app:layout_constraintTop_toTopOf="@+id/img_msg_sender" />
 
 
-        <TextView
-            android:id="@+id/txt_msg_sender_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="8dp"
-            android:layout_toRightOf="@+id/img_msg_sender"
-            android:text="Jhon Ibrahim"
-            android:textColor="@color/colorWhite"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@+id/img_msg_sender"
-            app:layout_constraintStart_toEndOf="@+id/img_msg_sender"
-            app:layout_constraintTop_toTopOf="@+id/img_msg_sender" />
+    <TextView
+        android:id="@+id/txt_msg_sender_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="8dp"
+        android:layout_toRightOf="@+id/img_msg_sender"
+        android:text="Jhon Ibrahim"
+        android:textColor="@color/colorWhite"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/img_msg_sender"
+        app:layout_constraintStart_toEndOf="@+id/img_msg_sender"
+        app:layout_constraintTop_toTopOf="@+id/img_msg_sender" />
 
-        <View
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_below="@+id/img_msg_sender"
-            android:background="@color/Graycolor"
-            app:layout_constraintTop_toBottomOf="parent" />
+    <View
+        android:id="@+id/view"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_below="@+id/img_msg_sender"
+        android:layout_marginTop="2dp"
+        android:background="@color/Graycolor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/img_msg_sender" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
