--- a/app/src/main/res/menu/options.xml
+++ b/app/src/main/res/menu/options.xml
@@ -2,10 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     >
-    <item android:id="@+id/add"
-        android:title="Edit"/>
+    <item
+        android:id="@+id/add"
+        android:title="Add Member" />
 
-    <item android:id="@+id/delete"
-        android:title="Delete"/>
+    <item
+        android:id="@+id/remove"
+        android:title="Remove Member" />
 
 </menu>
