--- a/app/src/main/res/layout/fragment_blog.xml
+++ b/app/src/main/res/layout/fragment_blog.xml
@@ -6,6 +6,7 @@
     android:background="@color/colorBlack"
     android:fillViewport="true"
     android:orientation="vertical"
+    android:animateLayoutChanges="true"
     android:padding="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -150,20 +151,39 @@
             android:layout_marginTop="8dp"
             android:background="#fff"
             android:padding="2dp"
+            android:visibility="gone"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/videoView2" />
+            app:layout_constraintTop_toBottomOf="@+id/fram" />
 
-        <VideoView
-            android:id="@+id/videoView2"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/fram"
+            android:layout_width="0dp"
             android:layout_height="200dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:visibility="gone"
+            android:background="@color/grey"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgVideo" />
+            app:layout_constraintTop_toBottomOf="@+id/imgVideo">
+
+            <VideoView
+                android:id="@+id/videoView2"
+                android:layout_centerInParent="true"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <ImageView
+                android:id="@+id/deleteVideo"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:padding="4dp"
+                android:src="@drawable/ic_close" />
+        </RelativeLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
