group notification check only remain and audio streaming

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -33,9 +33,9 @@
         android:icon="@drawable/user_admin"
         android:title="User Admin"/>
 
-        <item android:id="@+id/nav_SocialMediaFrame"
+       <!-- <item android:id="@+id/nav_SocialMediaFrame"
             android:icon="@drawable/frame"
-            android:title="Social Media Fram studio"/>
+            android:title="Social Media Fram studio"/>-->
 
         <item android:id="@+id/nav_ViewSongRequest"
             android:icon="@drawable/song"
