--- a/app/src/main/res/layout/activity_add_service.xml
+++ b/app/src/main/res/layout/activity_add_service.xml
@@ -35,6 +35,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
+        <ProgressBar
+            android:id="@+id/progressBarProfile"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:indeterminateDrawable="@drawable/progressbar"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/feature_img"
+            app:layout_constraintEnd_toEndOf="@+id/feature_img"
+            app:layout_constraintStart_toStartOf="@+id/feature_img"
+            app:layout_constraintTop_toTopOf="@+id/feature_img" />
+
+
         <ImageView
             android:layout_width="50dp"
             android:layout_height="50dp"
