add boimetric login icon

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -250,7 +250,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:contentDescription="@null"
-                    app:srcCompat="@drawable/logo" />
+                    app:srcCompat="@drawable/ic_login" />
 
                 <TextView
                     android:layout_width="wrap_content"
