--- a/app/src/main/res/layout/fragment_myfeed.xml
+++ b/app/src/main/res/layout/fragment_myfeed.xml
@@ -30,5 +30,16 @@
             app:fabSize="normal"
             />
 
+        <TextView
+            android:id="@+id/info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textSize="28sp"
+            android:visibility="gone"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@color/grey"
+            android:text="Create Blogs" />
+
     </RelativeLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
