--- a/app/src/main/res/layout/dialogue_about_app.xml
+++ b/app/src/main/res/layout/dialogue_about_app.xml
@@ -1,53 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
-    app:cardBackgroundColor="#5856D6"
-    app:cardElevation="0dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp">
 
-    <ImageView
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="16dp"
-        android:layout_gravity="center_horizontal"
-        android:scaleType="centerCrop"
-        android:src="@drawable/logo"/>
-
-    <ImageView
-        android:id="@+id/close"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginTop="6dp"
-        android:layout_gravity="right"
-        android:scaleType="centerCrop"
-        android:layout_marginRight="4dp"
-        app:srcCompat="@drawable/ic_close"/>
-
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="About App"
-        android:layout_marginTop="90dp"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:textColor="#fff"
-        android:layout_gravity="center_horizontal"
-        />
+        android:background="#5856D6"
+        android:orientation="vertical">
+        <ImageView
+            android:id="@+id/close"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="6dp"
+            android:layout_gravity="right"
+            android:scaleType="centerCrop"
+            android:layout_marginRight="4dp"
+            app:srcCompat="@drawable/ic_close"/>
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginTop="8dp"
+            android:layout_gravity="center_horizontal"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logo"/>
 
-    <TextView
-        android:id="@+id/txt_aboutapp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="120dp"
-        android:textSize="14sp"
-        android:textColor="#fff"
-        android:layout_marginBottom="10dp"
-        />
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="About App"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#fff"
+            android:layout_gravity="center_horizontal"
+            />
 
+        <TextView
+            android:id="@+id/txt_aboutapp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="8dp"
+            android:textSize="14sp"
+            android:textColor="#fff"
+            android:layout_marginBottom="10dp"
+            />
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
