--- a/app/src/main/res/layout/fragment_myfeed.xml
+++ b/app/src/main/res/layout/fragment_myfeed.xml
@@ -35,7 +35,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:textSize="28sp"
+            android:gravity="center"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:textSize="24sp"
             android:visibility="gone"
             android:fontFamily="@font/montserrat"
             android:textColor="@color/grey"
