--- a/app/src/main/res/layout/fragment_services.xml
+++ b/app/src/main/res/layout/fragment_services.xml
@@ -27,10 +27,13 @@
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="28sp"
+        android:gravity="center"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:textSize="24sp"
         android:visibility="gone"
         android:textColor="@color/grey"
-        android:text="Create Service"/>
+        android:text="Create Service" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/services_recycler"
