--- a/app/src/main/res/layout/withdraws_fragment.xml
+++ b/app/src/main/res/layout/withdraws_fragment.xml
@@ -143,6 +143,9 @@
         android:text="No Transations"
         android:textColor="@color/grey"
         android:textSize="24sp"
+        android:gravity="center"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
